<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="50dp"
        android:layout_width="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/appbar_layout"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_weight="2"
                android:gravity="start"

                android:text="@string/app_name"
                android:textAlignment="textStart"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="normal|bold" />

            <!--<ImageButton-->
                <!--android:layout_width="60dp"-->
                <!--android:layout_height="60dp"-->
                <!--android:onClick="showPopup"-->
                <!--android:scaleType="fitXY"-->
                <!--android:src="@drawable/menu" />-->

        </LinearLayout>


    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/userRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:itemCount="0" />

                </LinearLayout>
            </ScrollView>

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnAddProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@android:drawable/ic_input_add" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="53dp"
            android:layout_marginLeft="53dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="16dp" />

        <CheckBox
            android:id="@+id/checkBoxM"
            android:layout_width="67dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/spinner"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="103dp"
            android:layout_marginRight="103dp"
            android:layout_marginBottom="-7dp"
            android:layout_toEndOf="@+id/spinner"
            android:layout_toRightOf="@+id/spinner"
            android:text="@string/label_male" />

        <CheckBox
            android:id="@+id/checkBoxF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/checkBoxM"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="21dp"
            android:layout_marginRight="21dp"
            android:text="@string/label_female" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/checkBoxM"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:text="Sort By:" />
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>